--- a/index.html
+++ b/index.html
@@ -2,53 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Algoritmos Big Tech</title>
+  <title>509. Fibonacci Number</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Estudo aprofundado de algoritmos e estruturas de dados">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css" />
-  
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css"/>
-
-  <style>
-    :root {
-      --docsifytabs-border-color: #ededed;
-      --docsifytabs-tab-highlight-color: #42b983;
-    }
-  </style>
 </head>
 <body>
   <div id="app">Carregando a Mágica...</div>
   
   <script>
     window.$docsify = {
-      name: 'Algoritmos Big Tech',
-      repo: '', // Coloque o link do seu GitHub aqui ex: 'https://github.com/seuuser/repo'
-      
-      // Configuração das Abas (Code Tabs)
+      name: '509. Fibonacci Number',
+      repo: 'https://github.com/filipecancio/fibonacci-kotlin',
+
       tabs: {
-        persist: true,      // Lembra a aba que o usuário escolheu (ex: se clicou em Java, mantém Java)
-        sync: true,         // Sincroniza abas com o mesmo nome na página
-        theme: 'material',  // Tema visual das abas ('classic', 'material', false)
-        tabComments: true,  // Permite usar comentários para definir abas
-        tabHeadings: true   // Permite usar headers (####) para definir abas
+        persist: true,
+        sync: true,
+        theme: 'material',
+        tabComments: true,
+        tabHeadings: true
       },
 
-      // Configuração do LaTeX
       latex: {
-        inlineMath   : [['$', '$'], ['\\(', '\\)']], // Permite usar $...$ para inline
-        displayMath  : [['$$', '$$'], ['\\[', '\\]']] // Permite usar $$...$$ para bloco
+        inlineMath   : [['$', '$'], ['\\(', '\\)']],
+        displayMath  : [['$$', '$$'], ['\\[', '\\]']]
       },
-
-      // Configuração de Busca
+      
       search: {
         placeholder: 'Pesquisar...',
         noData: 'Não encontrado!',
         depth: 6
       },
-
-      // Tabela de Conteúdo (Menu lateral direito)
       toc: {
         scope: '.markdown-section',
         headings: 'h1, h2, h3, h4, h5, h6',
@@ -60,14 +45,9 @@
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-  
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
-  
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
-  
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
-  
-  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"></script>
 
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-kotlin.min.js"></script>
