--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     body {
       font-family: 'Fira Code', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
     }
+
+    code, pre, .token {
+      font-family: 'Fira Code', monospace !important;
+      font-variant-ligatures: contextual;
+      font-feature-settings: "calt" 1;
+    }
     
   </style>
 </head>
